# bao-base

./: .env.orig  .gitattributes  .gitignore  .gitmodules  .importlinter  .prettierignore  .prettierrc  .solhint.json  .validate-ignore  .verify-audit-ignore  CLAUDE.md  README.md  coverage.txt  foundry.toml  gas.txt  package-lock.json  package.json  prettier.config.js  pyproject.toml  pytest.ini  remappings.txt  run  setup.py  sizes.txt  slither.config.json  wake.toml
.github/: ubuntu_workflow_dispatch_current.json
bin-modules/: extract-coverage.py  extract-gas.py  extract-sizes.py  forge_tables.py  logging  matching-python.py  pyproject.toml  run-bash  run-python
doc/: bao-factory-integration-proposal.md  bao-ownable-suite-development-plan.md  baofactory-variant-selection-plan.md  code-duplication.md  cross-chain-deterministic-deployment.md  deployer-context-quick-ref.md  deployment-architecture.md  deployment-data-architecture.md  deployment-system.md  key-registration.md  nicks-factory-integration-plan.md  solady-proxy-migration-plan.md
lib/: README.txt  bao-base
maul/: README.md  __init__.py  exceptions.py  maul.toml  pyproject.toml  resolution.py  utils.py
maul/commands/: __init__.py  call.py  decode.py  format.py  grant.py  loader.py  resolve.py  send.py  sig.py  start.py  steal.py
maul/core/: __init__.py  eth.py  formatting.py
regression/: coverage-duration.txt  coverage.txt  gas-duration.txt  gas.txt  sizes.txt  test-duration.txt
results/: test_state_write.json
samples/: SampleERC165.sol  SampleOwnable.t.sol  SampleOwnableRoles.t.sol  SampleUpgradeable.sol
script/: DeployTest.s.sol  SetupInfrastructure.s.sol  deploy-test  (+10 more)
(+804 files in other folders)
