[project]
name = "bao-base"
version = "0.1.0"
description = "Bao Finance base library with regression testing"
requires-python = ">=3.9,<3.14"

dependencies = [
    "pandas>=2.3.3",
    "pytest~=7.4.0",
    "pytest-cov~=4.1.0",
    "tabulate>=0.9.0",
]

[tool.uv]
# Force uv to treat this as an application/environment, not a package to publish.
package = false

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"
