[project]
name = "bao-maul"
version = "0.1.0"
description = "Bao Finance Maul Commands"
requires-python = ">=3.9,<3.14"

dependencies = [
    # Core dependencies for maul
    "python-dotenv~=1.1.0",

    # Make sure we have tomli for configuration
    "tomli>=2.0.0; python_version < '3.11'",

    # For JSON handling
    "jsonschema~=4.19.0",

    # For web3 interactions
    "web3~=6.12.0",
    "eth-utils~=2.3.0",
    "eth-abi~=4.2.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff]
select = ["E", "F", "I"]
line-length = 100
target-version = "py39"

[tool.black]
line-length = 100
target-version = ["py39"]
